# FinTrace-Financial-Crime-Analytics

./: .gitignore  LICENSE  PyPI-Recovery-Codes-bhavesh0205-2026-05-31T19_53_45.066771.txt  README.md  app.py  pyproject.toml  requirements.txt  transactions.csv
aml/: __init__.py  anomaly.py  fraud.py  graph.py  synthetic.py
aml/sql/oracle/: cash_intensive.sql  dormancy.sql  structuring.sql  velocity.sql
aml/sql/postgres/: cash_intensive.sql  dormancy.sql  structuring.sql  velocity.sql
dashboard/: data_loader.py
notebooks/: 01_graph_analysis.ipynb  03_sar_patterns.ipynb  04_end_to_end_pipeline.ipynb
tests/: test_anomaly.py  test_fraud.py  test_graph.py  test_sql.py  test_synthetic.py
