[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aml-analytics"
version = "1.0.0"
description = "Open-source Python toolkit for AML detection and financial crime analytics — transaction graph analysis, anomaly scoring, SAR pattern matching, and SQL helpers for BSA/FinCEN compliance."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
  "aml", "anti-money-laundering", "financial-crime",
  "bsa", "fincen", "transaction-monitoring", "compliance",
  "anomaly-detection", "graph-analytics"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "networkx>=3.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "flake8", "pre-commit"]
aws = ["boto3>=1.26"]

[project.urls]
Homepage = "https://github.com/Bhavesh0205/aml-analytics"
Documentation = "https://github.com/Bhavesh0205/aml-analytics/docs"
"Bug Tracker" = "https://github.com/Bhavesh0205/aml-analytics/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "dist"]

[tool.setuptools.packages.find]
include = ["aml*"]